--- a/School/src/main/webapp/resources/styles/css/custom/login.css
+++ b/School/src/main/webapp/resources/styles/css/custom/login.css
@@ -1,5 +1,18 @@
 @charset "UTF-8";
 
+label {
+	width: 80px;
+	text-align: left;
+}
+
+input {
+	margin-left: 50px;
+}
+
+button {
+	margin-top: 20px;
+}
+
 .text-center {
 	margin-top: 50px;
 	border: 1px solid lightgray;
@@ -17,11 +30,15 @@
 	text-align: center;
 }
 
-label {
-	width: 80px;
-	text-align: left;
-}
 
-input {
-	margin-left: 50px;
-}
+
+
+
+
+
+
+
+
+
+
+
