--- a/School/src/main/webapp/resources/styles/css/custom/register.css
+++ b/School/src/main/webapp/resources/styles/css/custom/register.css
@@ -17,6 +17,18 @@ button {
 	margin-bottom: 20px;
 }
 
+/* input type number hide arrow */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+	width: 80px;
+}
+
 .wantType {
 	display: flex;
 	justify-content: center;
