비밀번호 확인 구현중

--- a/School/src/main/webapp/resources/styles/css/custom/register.css
+++ b/School/src/main/webapp/resources/styles/css/custom/register.css
@@ -69,3 +69,17 @@ input[type=number] {
 .checkIdResult:focus {
 	outline: none;
 }
+
+.passwdSameCheck {
+	width: 250px;
+	border: none;
+}
+
+.passwdSameCheck:focus {
+	outline: none;
+}
+
+
+
+
+
