--- a/School/src/main/webapp/resources/styles/css/custom/modify.css
+++ b/School/src/main/webapp/resources/styles/css/custom/modify.css
@@ -36,6 +36,14 @@ table {
     width: 350px;
     color: lightgray;
 }
+#file {
+    position: absolute;
+    width: 0;
+    height: 0;
+    padding: 0;
+    overflow: hidden;
+    border: 0;
+}
 label {
     display: inline-block;
     border-radius: 4px;
@@ -46,12 +54,4 @@ label {
     cursor: pointer;
     height: 35px;
     margin-left: 10px;
-}
-input[type="file"] {
-    position: absolute;
-    width: 0;
-    height: 0;
-    padding: 0;
-    overflow: hidden;
-    border: 0;
 }
