--- a/School/src/main/webapp/resources/styles/css/custom/aboutAdmin.css
+++ b/School/src/main/webapp/resources/styles/css/custom/aboutAdmin.css
@@ -1,5 +1,60 @@
 @charset "UTF-8";
 
+/* select box 커스터마이징 */
+select {
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+	
+	width: 100%;
+	height: 38px;
+	
+	font-family: "Noto Sansf KR", sans-serif;
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 1.5;
+	
+	color: lightgray;
+	background-color: #fff;
+	
+	padding-left: 10px;
+	margin: 0;
+	
+	border: 1px solid lightgray;
+	border-radius: 4px;
+	box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+}
+
+/* input[type=file] 커스터마이징 */
+.filebox .upload-name {
+    display: inline-block;
+    height: 50px;
+    padding: 0 10px;
+    vertical-align: middle;
+    border: 1px solid lightgray;
+    width: 74%;
+    color: lightgray;
+}
+.filebox label {
+    display: inline-block;
+    border-radius: 4px;
+    padding: 10px 20px;
+    color: #fff;
+    vertical-align: middle;
+    background-color: #999999;
+    cursor: pointer;
+    height: 40px;
+    margin-left: 10px;
+}
+.filebox input[type="file"] {
+    position: absolute;
+    width: 0;
+    height: 0;
+    padding: 0;
+    overflow: hidden;
+    border: 0;
+}
+
 .buttons {
 	text-align: center;
 	margin-top: 20px;
