교직원 관리 데이터 불러오기 완료

--- a/School/src/main/webapp/resources/styles/css/admin-style.css
+++ b/School/src/main/webapp/resources/styles/css/admin-style.css
@@ -423,7 +423,7 @@ margin: 20px 0;
 .carousel-indicators {
 bottom: -30px;
 }
-.team-member {
+.teacher {
     text-align: center;
     background-color: #F9F9F9;
     padding-bottom: 15px;
