교육목표 등록 기능 구현

--- a/School/src/main/webapp/resources/styles/css/custom/fileAdmin.css
+++ b/School/src/main/webapp/resources/styles/css/custom/fileAdmin.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 
+/* aboutAdmin, purposeAdmin, historyAdmin, currentAdmin, symbolAdmin, songAdmin CSS */
+
 /* select box 커스터마이징 */
 select {
 	-moz-appearance: none;
@@ -59,6 +61,6 @@ select {
 	text-align: center;
 	margin-top: 20px;
 }
-.buttons button {
+.registerButton button {
 	margin: 10px;
 }
