--- a/School/src/main/webapp/resources/styles/css/custom/aboutAdmin.css
+++ b/School/src/main/webapp/resources/styles/css/custom/aboutAdmin.css
@@ -1,6 +1,29 @@
 @charset "UTF-8";
 
-/* purposeAdmin, historyAdmin, currentAdmin, symbolAdmin, songAdmin CSS */
+/* select box 커스터마이징 */
+select {
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+	
+	width: 100%;
+	height: 38px;
+	
+	font-family: "Noto Sansf KR", sans-serif;
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 1.5;
+	
+	color: lightgray;
+	background-color: #fff;
+	
+	padding-left: 10px;
+	margin: 0;
+	
+	border: 1px solid lightgray;
+	border-radius: 4px;
+	box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+}
 
 /* input[type=file] 커스터마이징 */
 .filebox .upload-name {
@@ -32,11 +55,11 @@
     border: 0;
 }
 
-.registerButton {
-	text-align: center;
-	margin-top: 20px;
+td {
+	display: none;
 }
-.buttons {
+
+.registerButton {
 	text-align: center;
 	margin-top: 20px;
 }
