교직원, 교육목표 사용자 화면 구현

--- a/School/src/main/webapp/resources/styles/css/custom/fileAdmin.css
+++ b/School/src/main/webapp/resources/styles/css/custom/fileAdmin.css
@@ -32,6 +32,11 @@
     border: 0;
 }
 
+.img {
+	text-align: center;
+	margin-top: 50px;
+}
+
 .registerButton {
 	text-align: center;
 	margin-top: 20px;
