--- a/School/src/main/webapp/resources/styles/css/custom/write.css
+++ b/School/src/main/webapp/resources/styles/css/custom/write.css
@@ -20,6 +20,11 @@ table {
 	outline: none;
 }
 
+.preview-image {
+	max-width: 300px;
+	max-height: 300px;
+}
+
 .content {
 	width: 100%;
 	height: 500px;
