게시판 사용자 이름 아이디 수정

--- a/School/src/main/webapp/resources/styles/css/custom/register.css
+++ b/School/src/main/webapp/resources/styles/css/custom/register.css
@@ -73,6 +73,13 @@ input[type=number] {
 	float: right;
 }
 
+.hide-cursor {
+	background-color: lightgray;
+	border: none;
+	outline: none;
+	caret-color: transparent;
+}
+
 .sample4_postcode {
 	width: 100px;
 }
