회원관리 기능 구현

--- a/School/src/main/webapp/resources/styles/css/custom/register.css
+++ b/School/src/main/webapp/resources/styles/css/custom/register.css
@@ -29,6 +29,10 @@ input[type=number] {
 	width: 80px;
 }
 
+input[name=userName] {
+	width: 173px;
+}
+
 .wantType {
 	display: flex;
 	justify-content: center;
